<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/windowBackground">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/large_padding"
            android:paddingLeft="@dimen/large_padding"
            android:paddingTop="@dimen/xlarge_padding"
            android:paddingEnd="@dimen/large_padding"
            android:paddingRight="@dimen/large_padding"
            android:paddingBottom="@dimen/xlarge_padding">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_atome"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge_margin"
                android:text="@string/atome_info_text"/>

        <TextView
                style="?attr/editTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge_margin"
                android:text="@string/label_name"/>

        <co.omise.android.ui.OmiseEditText
                android:id="@+id/edit_full_name"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:nextFocusForward="@id/edit_email"/>

        <TextView
                style="?attr/editTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall_margin"
                android:text="@string/label_email_optional"/>

        <co.omise.android.ui.OmiseEditText
                android:id="@+id/edit_email"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/edit_phone_number"/>

        <TextView
                android:id="@+id/text_atome_email_error"
                style="?attr/editTextErrorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                style="?attr/editTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall_margin"
                android:text="@string/label_phone_number"/>

        <co.omise.android.ui.OmiseEditText
                android:id="@+id/edit_phone_number"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:nextFocusForward="@id/edit_shipping_street"/>

        <TextView
                android:id="@+id/text_phone_number_error"
                style="?attr/editTextErrorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/label_shipping"/>

        <TextView
                style="?attr/editTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/label_street"/>

        <co.omise.android.ui.OmiseEditText
                android:id="@+id/edit_shipping_street"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:nextFocusForward="@id/edit_shipping_postal"/>

        <TextView
                style="?attr/editTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall_margin"
                android:text="@string/label_postal"/>

        <co.omise.android.ui.OmiseEditText
                android:id="@+id/edit_shipping_postal"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:nextFocusForward="@id/edit_shipping_city"/>
        <TextView
                style="?attr/editTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall_margin"
                android:text="@string/label_city"/>

        <co.omise.android.ui.OmiseEditText
                android:id="@+id/edit_shipping_city"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:nextFocusForward="@id/edit_shipping_country"/>

        <TextView
                style="?attr/editTextLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall_margin"
                android:text="@string/label_country_code"/>

        <co.omise.android.ui.OmiseEditText
                android:id="@+id/edit_shipping_country"
                style="?android:attr/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:nextFocusForward="@id/button_submit"/>

        <TextView
                android:id="@+id/text_shipping_address_error"
                style="?attr/editTextErrorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xsmall_margin"/>

        <CheckBox android:id="@+id/checkbox_billing_shipping"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/xsmall_margin"
                  android:text="@string/label_billing_shipping"/>

        <LinearLayout
                android:id="@+id/billing_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

            <TextView
                    android:id="@+id/label_billing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/label_billing"/>

            <TextView
                    android:id="@+id/label_billing_street"
                    style="?attr/editTextLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_margin"
                    android:text="@string/label_street"/>

            <co.omise.android.ui.OmiseEditText
                    android:id="@+id/edit_billing_street"
                    style="?android:attr/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:nextFocusForward="@id/edit_billing_postal"/>

            <TextView
                    android:id="@+id/label_billing_postal"
                    style="?attr/editTextLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsmall_margin"
                    android:text="@string/label_postal"/>

            <co.omise.android.ui.OmiseEditText
                    android:id="@+id/edit_billing_postal"
                    style="?android:attr/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress"
                    android:nextFocusForward="@id/edit_billing_city"/>

            <TextView
                    android:id="@+id/label_billing_city"
                    style="?attr/editTextLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsmall_margin"
                    android:text="@string/label_city"/>

            <co.omise.android.ui.OmiseEditText
                    android:id="@+id/edit_billing_city"
                    style="?android:attr/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:nextFocusForward="@id/edit_billing_country"/>

            <TextView
                    android:id="@+id/label_billing_country"
                    style="?attr/editTextLabelStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsmall_margin"
                    android:text="@string/label_country_code"/>

            <co.omise.android.ui.OmiseEditText
                    android:id="@+id/edit_billing_country"
                    style="?android:attr/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:nextFocusForward="@id/button_submit"/>

            <TextView
                    android:id="@+id/text_billing_address_error"
                    style="?attr/editTextErrorStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xsmall_margin"/>
        </LinearLayout>

        <Button
                android:id="@+id/button_submit"
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:enabled="false"
                android:text="@string/button_next"
                tools:enabled="true"/>

    </LinearLayout>

</ScrollView>
